# scantpaper

./: .coveragerc  .gitignore  .pylintrc  CONTRIBUTING.md  README.md  changelog.md  pyproject.toml  pytest.ini  requirements.txt  scantpaper.appdata.xml  scantpaper.desktop  setup.py  tox.ini
.github/workflows/: deb.yml  test.yml
dev/: compile_mo.py  generate_pot.py
po/: scantpaper-ab.po  scantpaper-be.po  scantpaper-bg.po  scantpaper-ca.po  scantpaper-cs.po  scantpaper-da.po  scantpaper-de.po  scantpaper-el.po  scantpaper-en_GB.po  scantpaper-en_US.po  scantpaper-es.po  scantpaper-eu.po  scantpaper-fa.po  scantpaper-fi.po  scantpaper-fr.po  scantpaper-gl.po  scantpaper-gu.po  scantpaper-he.po  scantpaper-hr.po  scantpaper-hu.po  scantpaper-it.po  scantpaper-ja.po  scantpaper-ko.po  scantpaper-nb.po  scantpaper-nl.po  scantpaper-oc.po  scantpaper-pl.po  scantpaper-pt.po  scantpaper-pt_BR.po  scantpaper-ru.po  scantpaper-sk.po  scantpaper-sl.po  scantpaper-sv.po  scantpaper-tr.po  scantpaper-uk.po  scantpaper-zh_CN.po  scantpaper-zh_TW.po
resources/: scantpaper.ui
scantpaper/: app.py  app.ui  app_window.py  basedocument.py  baseprocess.py  basethread.py  bboxtree.py  canvas.py  comboboxtext.py  config.py  conftest.py  const.py  dialog.py  docthread.py  document.py  edit_menu_mixins.py  entry_completion.py  file_menu_mixins.py  helpers.py  i18n.py  imageview.py  importthread.py  loop_helpers.py  menu.ui  netpbm.py  page.py  pagerange.py  postprocess_controls.py  print_operation.py  progress.py  rotate_controls.py  runner.py  savethread.py  scan_menu_item_mixins.py  session_mixins.py  simplelist.py  sqliteview.py  tesseract.py  text_layer_control.py  tools_menu_mixins.py  (+2 more)
scantpaper/dialog/: __init__.py  crop.py  pagecontrols.py  paperlist.py  preferences.py  renumber.py  sane.py  save.py  scan.py
scantpaper/frontend/: enums.py  image_sane.py
scantpaper/scanner/: options.py  profile.py
scantpaper/test_imageview/: test_1_basics.py  test_2_transparent.py  test_3_zoom.py  test_4_select.py  test_5_filter.py
scantpaper/tests/: test_01_netpbm.py  test_02_scanner_options_brother.py  test_02_scanner_options_brother_dcp_7025.py  test_02_scanner_options_brother_mfc_5100c.py  test_02_scanner_options_brother_mfc_8860dn.py  test_02_scanner_options_canon.py  test_02_scanner_options_canonlide25.py  test_02_scanner_options_canoscan_fb_630p.py  test_02_scanner_options_epson1.py  test_02_scanner_options_epson_3490.py  test_02_scanner_options_epson_gt_2500.py  test_02_scanner_options_from_data.py  test_02_scanner_options_fujitsu.py  (+204 more)
src/: main.rs
(+27 files in other folders)
