[project]
name = "scantpaper"
version = "3.0.5"
dependencies = [
  "img2pdf",
  "ocrmypdf>=15.4.3",
  "pycairo",
  "PyGObject",
  "python-iso639",
  "python-sane",
  "tesserocr",
  "tomli>=1.1.0;python_version<'3.11'",
]
requires-python = ">=3.8"
authors = [
  {name = "Jeffrey Ratcliffe", email = "jffry@posteo.net"},
]
maintainers = [
  {name = "Jeffrey Ratcliffe", email = "jffry@posteo.net"},
]
description = "GUI to produce PDFs or DjVus from scanned documents"
readme = "README.md"
license = { text = "GPL-3.0-only" }
keywords = ['scan', 'pdf', 'djvu']
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# This could be removed if we moved to a src-based layout
[tool.setuptools.packages.find]
include = ["scantpaper*"]
exclude = ["scantpaper.tests"]

[tool.setuptools.package-data]
scantpaper = ["app.ui"]

[tool.pytest.ini_options]
addopts = "--black --timeout=300 --cov=scantpaper --cov-report=html --cov-fail-under=98 --cov-append"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[project.optional-dependencies]
test = [
    "black==26.3.1",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "pytest-xvfb",
    "tomli",
]

[project.urls]
Homepage = "https://github.com/carygravel/scantpaper"
Repository = "https://github.com/carygravel/scantpaper.git"
"Bug Tracker" = "https://github.com/carygravel/scantpaper/issues"

[project.gui-scripts]
scantpaper = "scantpaper.app:main"
